--- a/style.css
+++ b/style.css
@@ -327,10 +327,12 @@ body {
 
 @media (min-width: 320px) and (max-width: 426px) {
     .gray {
-        height: 600vh;
+        height: 120vh;
     }
     .container {
-        margin: 20px 10px;
+        height: 100%;
+        margin: 50px 10px;
         padding: 0 20px;
+        gap: 50px;
     }
 }
